# qboot

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  .markdownlint.json  CMakeLists.txt  CPPLINT.cfg  Dockerfile  FindGMP.cmake  FindMPFR.cmake  README.md
.github/workflows/: c-cpp.yml
algebra/: CMakeLists.txt
algebra/include/: complex.hpp  complex_function.hpp  complex_io.hpp  integer.hpp  matrix.hpp  polynomial.hpp  rational.hpp  real.hpp  real_function.hpp  real_io.hpp
algebra/src/: complex_function.cpp  integer.cpp  matrix.cpp  polynomial.cpp  rational.cpp  real.cpp  real_function.cpp
cmake/: Config.cmake.in  FindGMP.cmake  FindMPFR.cmake  utils.cmake
docs/: implementation.md
include/qboot/: block.hpp  bootstrap_equation.hpp  conformal_scale.hpp  context.hpp  hor_formula.hpp  hor_recursion.hpp  my_concepts.hpp  my_filesystem.hpp  polynomial_program.hpp  primary_op.hpp  qboot.hpp  scale_factor.hpp  sdpb_input.hpp  task_queue.hpp  xml_input.hpp
include/qboot/algebra/: complex_function.hpp  matrix.hpp  polynomial.hpp  real_function.hpp
include/qboot/mp/: integer.hpp  rational.hpp  real.hpp
main/: CMakeLists.txt
main/src/: main.cpp
qboot/: CMakeLists.txt
qboot/include/: block.hpp  bootstrap_equation.hpp  chol_and_inverse.hpp  complex_function.hpp  conformal_scale.hpp  context.hpp  context_variables.hpp  damped_rational.hpp  hor_formula.hpp  hor_recursion.hpp  integral_decomp.hpp  my_filesystem.hpp  partial_fraction.hpp  pole_data.hpp  polynomial_program.hpp  primary_op.hpp  real_function.hpp  scale_factor.hpp  sdpb_input.hpp  task_queue.hpp  xml_input.hpp
qboot/src/: block.cpp  bootstrap_equation.cpp  conformal_scale.cpp  context.cpp  context_variables.cpp  empty.cpp  hor_formula.cpp  hor_formula_0.cpp  hor_recursion.cpp  polynomial_program.cpp  primary_op.cpp  scale_factor.cpp  sdpb_input.cpp  task_queue.cpp  test.cpp  xml_input.cpp
sample/: CMakeLists.txt  Dockerfile  main.cpp
src/: block.cpp  bootstrap_equation.cpp  conformal_scale.cpp  context.cpp  hor_formula.cpp  hor_recursion.cpp  polynomial_program.cpp  primary_op.cpp  scale_factor.cpp  sdpb_input.cpp  task_queue.cpp  xml_input.cpp
src/algebra/: complex_function.cpp  matrix.cpp  polynomial.cpp  real_function.cpp
src/mp/: integer.cpp  rational.cpp  real.cpp
test/: CMakeLists.txt
test/src/: comp.cpp  main.cpp
util/: CMakeLists.txt
util/include/: io.hpp  multi_array.hpp  my_hash.hpp
util/src/: empty.cpp
